<resources>
    <string name="app_name">ParcialTP3-Grupo4</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_main_btn_text">Hola</string>
    <string name="searchflight">SearchFlight</string>
    <string name="back_arrow">Volver</string>
    <string name="more_options">Más opciones</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="generales">Generales</string>
    <string name="icon_description">Icono de avión despegando</string>
    <string name="select_departure">Select Departure</string>
    <string name="select_arrival">Select Arrival</string>
    <string name="select_date">Select Date</string>
    <string name="class_input">Economy</string>
    <string name="class_input_label">Class</string>
    <string name="passengers">1 Adult</string>
    <string name="passengers_label">Passengers</string>
    <string name="button_search">Search</string>
    <string name="round">Round Trip</string>
    <string name="one_way">One Way</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="modo_claro">Modo claro</string>
    <string name="discount_master_simp">20% discount for mastercard users</string>
    <string name="limited_time">Limited time offer!</string>
    <string name="discount_visa_simp"> 25% discount with your Visa credit cards</string>
    <string name="discount_visa">Use your VISA credit or debit card with any transaction and get 25% discount instantly!</string>
    <string name="discount_visa25">25% Discount with your VISA credit or Debit cards</string>
    <string name="discount_master">Get 20% discount with your Master credit cards</string>
    <string name="discount_master20">Use your mastercard with any transaction and get 20% discount instantly! </string>
    <string name="limited_offer">LIMITED OFFER!</string>
    <string name="airport_code_eze">EZE</string>
    <string name="airport_code_lax">LAX</string>
    <string name="date_july">29 July, 2022</string>
    <string name="results_found_35"> 35 results found</string>
    <string name="airline_united">United Airlines</string>
    <string name="hour_40min">01 hr 40min</string>
    <string name="LA">Los Angeles</string>
    <string name="philippines">Philippines</string>
    <string name="EZE">Ezeiza Ar</string>
    <string name="price_1000"> $1000</string>
    <string name="price_349"> $349</string>
    <string name="class_business">Business Class</string>
    <string name="view_details">View Details</string>
    <string name="boracay">Boracay</string>
    <string name="overview">Overview</string>
    <string name="description">Spend 5 days and 4 nights in one of the best islands in the world! Bask in the sun while walking in the white sand beach and enjoy the night partying at the popular seaside bars.</string>
    <string name="flight_details">Flight Details</string>
    <string name="flight_number">Flight Number</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="duration">Duration</string>
    <string name="photos">Photos</string>
    <string name="book_now">Book Now</string>
    <string name="payment_details">Payment Details</string>
    <string name="name_macy">Macy Johnson</string>
    <string name="description_beach">I like the beach, mountains, forest, and everything about nature! :)</string>
    <string name="philippines_baguio">Baguio, Philippines</string>
    <string name="referral">Referral Code</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="user_name">User Name</string>
    <string name="offer_description">Offer description</string>
    <string name="offers_label">Offers</string>
    <string name="logo">logo</string>
    <string name="departure_date">Departure Date</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="get_help">Get Help</string>
    <string name="calendar">Calendar</string>

</resources>
