<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/bottom_bar_profile"
            android:icon="@drawable/m_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/drawer_notifications"
            android:icon="@drawable/m_notification"
            android:title="@string/notifications" />
        <item
            android:id="@+id/drawer_help"
            android:icon="@drawable/m_gethelp"
            android:title="@string/get_help" />
        <item
            android:id="@+id/drawer_calendar"
            android:icon="@drawable/m_calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/m_settings"
            android:title="@string/settings" />



</menu>