<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BoracayFragment">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo_boracay"
        app:layout_constraintHeight_percent="0.60"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/roundedLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_top_corners"
        android:orientation="vertical"
        app:layout_constraintHeight_percent="0.88"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="55dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/name"
                android:src="@drawable/diasboracay" />


            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/inter_bold"
                android:gravity="center_vertical"
                android:text="@string/boracay"
                android:textColor="#191919"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/imageView5"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="-10dp"
                android:fontFamily="@font/inter_bold"
                android:gravity="bottom"
                android:text="@string/price_349"
                android:textColor="#191919"
                android:textSize="24sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/philippines"
            android:fontFamily="@font/inter"
            android:textSize="16sp"
            android:textColor="#7E8B97"
            android:layout_marginStart="20dp"
            android:layout_marginTop="1dp" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_semibold"
            android:textSize="16sp"
            android:textColor="#191919"
            android:text="@string/overview"
             />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/inter"
            android:lineSpacingExtra="7dp"
            android:text="@string/description"

            android:textColor="#191919"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photos"
            android:textColor="#191919"
            android:fontFamily="@font/inter_semibold"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_carousel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"/>

        <Button
            android:id="@+id/book_now_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:textSize="14sp"
            android:text="@string/book_now"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_button"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp" />



    </LinearLayout>


    <FrameLayout
        android:id="@+id/fab_left"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/circle_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/baseline_arrow_back_24" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fab_right"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="25dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/circle_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/heartImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/heart_selector" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>