<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"

        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/hambuerguer"
            android:contentDescription="@string/back_arrow"
            android:layout_gravity="start|center_vertical" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="32dp"
            android:layout_marginStart="70dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/back_arrow"
            android:layout_gravity="start|center_vertical" />

        <ImageView
            android:id="@+id/more_vert"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/picture_profile"
            android:contentDescription="@string/more_options"
            android:layout_gravity="end|center_vertical" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="343dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/textGenerales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Generales"
                android:textColor="@color/blue"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Botón Modo oscuro -->
            <TextView
                android:id="@+id/buttonModoOscuro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:textSize="22sp"
                android:text="@string/modo_oscuro"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textGenerales"
                app:layout_constraintTop_toTopOf="parent"/>

            <!-- Switch para cambiar el modo oscuro -->
            <Switch
                android:id="@+id/switchModoOscuro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/buttonModoOscuro"
                app:layout_constraintTop_toBottomOf="@id/textGenerales"
                app:layout_constraintStart_toEndOf="@id/buttonModoOscuro"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>